@@ -1,3 +1,3 @@
 Please refer to http://pkgin.net/
 
-Emile "iMil" Heitor <imil@gcu.info>
+Emile "iMil" Heitor <imil@NetBSD.org>
