@@ -1,4 +1,4 @@
-/* $Id: messages.h,v 1.9 2011/08/30 16:23:00 imilh Exp $ */
+/* $Id: messages.h,v 1.10 2011/09/06 17:49:09 imilh Exp $ */
 
 /*
  * Copyright (c) 2009, 2010 The NetBSD Foundation, Inc.
@@ -63,8 +63,8 @@
 #define MSG_INSTALLING "installing %s...\n"
 #define MSG_REQT_NOT_PRESENT \
 	"%s, needed by %s is not present in this system.\n"
-#define MSG_REQT_NOT_PRESENT_BUT \
-	"warning: %s is not present in this system (may be installed by this package)\n"
+#define MSG_REQT_NOT_PRESENT_DEPS \
+	"warning: %s is not present in this system nor package's dependencies\n"
 #define MSG_CONFLICT_PKG \
 	"%s (to be installed) conflicts with installed package %s.\n"
 #define MSG_NOTHING_TO_DO "nothing to do.\n"
@@ -144,3 +144,6 @@ please re-run %s with a package name matching one of the following:\n"
 
 /* selection.c */
 #define MSG_EMPTY_IMPORT_LIST "Empty import list."
+
+/* pkg_check.c */
+#define MSG_NO_PROV_REQ "Nothing %s by %s.\n"
