@@ -242,4 +242,4 @@ FreeBSD port and patches
 MINIX port
 .El
 .Sh BUGS
-Probably many to be found.
+We're hunting them.
