@@ -1,4 +1,4 @@
-/* $Id: pkgindb_queries.c,v 1.10 2011/08/31 16:58:26 imilh Exp $ */
+/* $Id: pkgindb_queries.c,v 1.11 2011/09/06 17:49:09 imilh Exp $ */
 
 /*
  * Copyright (c) 2009, 2010 The NetBSD Foundation, Inc.
@@ -95,13 +95,13 @@ const char GET_CONFLICT_QUERY[] =
 const char GET_REQUIRES_QUERY[] =
     "SELECT REMOTE_REQUIRES.REMOTE_REQUIRES_PKGNAME "
     "FROM REMOTE_REQUIRES,REMOTE_PKG "
-    "WHERE REMOTE_PKG.PKGNAME = \'%s\' "
+    "WHERE REMOTE_PKG.FULLPKGNAME = '%s' "
     "AND REMOTE_REQUIRES.PKG_ID = REMOTE_PKG.PKG_ID;";
 
 const char GET_PROVIDES_QUERY[] =
     "SELECT REMOTE_PROVIDES.REMOTE_PROVIDES_PKGNAME "
     "FROM REMOTE_PROVIDES,REMOTE_PKG "
-    "WHERE REMOTE_PKG.PKGNAME = \'%s\' "
+    "WHERE REMOTE_PKG.FULLPKGNAME = '%s' "
     "AND REMOTE_PROVIDES.PKG_ID = REMOTE_PKG.PKG_ID;";
 
 const char LOCAL_PROVIDES[] =
